Bug 275396 - Blank box is displaying instead of drop cap letter
Summary: Blank box is displaying instead of drop cap letter
Status: VERIFIED FIXED
Alias: None
Product: calligracommon
Classification: Applications
Component: text-layout (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-11 14:19 UTC by swathi
Modified: 2011-12-01 07:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Test data (12.72 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2011-06-11 14:19 UTC, swathi
Details
Screenshot in MS Office (143.07 KB, image/x-png)
2011-06-11 14:20 UTC, swathi
Details
Screenshot in Calligra Words (125.53 KB, image/x-png)
2011-06-11 14:22 UTC, swathi
Details
Koconverted test data (3.57 KB, application/vnd.oasis.opendocument.text)
2011-06-11 14:22 UTC, swathi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description swathi 2011-06-11 14:19:55 UTC
Created attachment 60888 [details]
Test data

Version: git checkout 8288143b7c1f9f9005209b55b651875219b0e9d6
        (Using KDE 4.5.5)                
     OS: Kubuntu 10.10
Test data is in word 2007 which has drop caps on the number of lines.
Open the same document in Calligra Words.check the display of the drop cap in 2nd page.

Expected outcome:
Drop cap letter should be displayed in 9 lines.
Actual outcome:
Blank box is displaying instead of drop cap letter.
Please check the screenshots attached.
Frequency:
Always.
Comment 1 swathi 2011-06-11 14:20:39 UTC
Created attachment 60889 [details]
Screenshot in MS Office
Comment 2 swathi 2011-06-11 14:22:07 UTC
Created attachment 60890 [details]
Screenshot in Calligra Words
Comment 3 swathi 2011-06-11 14:22:45 UTC
Created attachment 60891 [details]
Koconverted test data

Drop cap is displaying fine in Koconverted data.
Comment 4 Camilla Boemann 2011-11-30 03:59:23 UTC
Git commit b35d0c33b60a9e4abb0fc24320f468c852343bd1 by C. Boemann.
Committed on 29/11/2011 at 17:14.
Pushed by boemann into branch 'master'.

Fix dropcaps that contain a softbreak. In the same step we also fix
dropcaps that begin with spaces

BUG: 275396

M  +25   -7    libs/textlayout/KoTextLayoutArea.cpp

http://commits.kde.org/calligra/b35d0c33b60a9e4abb0fc24320f468c852343bd1
Comment 5 swathi 2011-12-01 07:48:26 UTC
Verified in 5992551fa6b6bf4e2d716728e086fd48ff905e33 .
Comment 6 swathi 2011-12-01 07:48:29 UTC
Verified in 5992551fa6b6bf4e2d716728e086fd48ff905e33 .