Fix dropcaps that contain a softbreak. In the same step we also fix dropcaps that begin with spaces

BUG: 275396